# htb-peng-front

./: Penguu.sln  README.md  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: main_penguu.yml
Penguu.App/: Penguu.App.csproj  Program.cs  WeatherForecast.cs  appsettings.json
Penguu.App/ClientApp/: package-lock.json  package.json
Penguu.App/ClientApp/public/: index.html  manifest.json
Penguu.App/ClientApp/src/: App.jsx  AppRoutes.js  custom.css  setupProxy.js  setupTests.js
Penguu.App/ClientApp/src/api/: api.js
Penguu.App/Controllers/: DeviceDataController.cs  OidcConfigurationController.cs  SensorUserController.cs  WeatherForecastController.cs
Penguu.App/Data/: ApplicationDbContext.cs  SensorManager.cs  SensorReportDTO.cs
Penguu.App/Data/Interface/: ISensorManager.cs
Penguu.App/Data/Migrations/: 00000000000000_CreateIdentitySchema.Designer.cs  00000000000000_CreateIdentitySchema.cs  ApplicationDbContextModelSnapshot.cs
Penguu.App/Migrations/: 20230304203535_initial.Designer.cs  20230304203535_initial.cs  20230305053136_sensor-schema.Designer.cs  20230305053136_sensor-schema.cs  20230305070320_sensor-payload.Designer.cs  20230305070320_sensor-payload.cs  ApplicationDbContextModelSnapshot.cs
Penguu.App/Models/: AlertType.cs  ApplicationUser.cs  SensorAlert.cs  SensorUser.cs
Penguu.App/Pages/: Error.cshtml.cs  _ViewImports.cshtml
Penguu.App/Pages/Shared/: _Layout.cshtml  _LoginPartial.cshtml
Penguu.App/Properties/: launchSettings.json
src/peng/: db.sqlite3  manage.py
src/peng/peng/: asgi.py  settings.py  urls.py  wsgi.py
(+13 files in other folders)
